# ActCLI-HIC

./: .gitignore  Github -Info.md  LICENSE  README.md  Vision-Concept.md  hic-dev.sh  hic.sh  hw_assessor-readme.md  hw_assessor.py  pyproject.toml
agents/hw_assessor/: __init__.py  __main__.py
app/: __init__.py  config.py  db.py  discovery.py  main.py  models.py  schemas.py
app/api/: routes.py
docs/: SPA-API-notes.md  UX-journey.md  actcli-theme-reference.md  backlog.md  sudo-access.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/routes/: App.tsx  CompareView.tsx  ExploreView.tsx
frontend/src/state/: appState.ts
frontend/src/styles/: base.css  theme.ts
tests/: test_discovery.py  test_hw_assessor.py
